<resources>
    <string name="app_name">Super Magazin</string>


    <string name="login_message">Log in\nOr leave all fields blank to continue anonymously</string>
    <string name="login_username">E-mail</string>
    <string name="login_password">Password</string>
    <string name="login_enter">Enter</string>
    <string name="login_register"><u>Do not have an account?</u></string>
    <string name="login_auth_error">Wrong e-mail or password</string>
    <string name="login_something_went_wrong">Something went wrong</string>
    <string name="login_empty_email">You have to enter an email</string>
    <string name="login_empty_password">You have to enter a password</string>


    <string name="title_activity_user">Super Magazin</string>
    <string name="nav_header_title">First name Last name</string>
    <string name="nav_header_subtitle">example@mail.com</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="user_menu_product">Product</string>
    <string name="user_menu_list">List</string>
    <string name="user_menu_user">User</string>
    <string name="user_menu_logout">Log out</string>
    <string name="item_menu_buy">Buy</string>
    <string name="item_menu_edit">Edit</string>
    <string name="item_menu_add">Add</string>
    <string name="item_menu_accept">Accept</string>
    <string name="user_menu_inbox">Inbox</string>
    <string name="order_name">Name</string>
    <string name="order_email">Email</string>
    <string name="order_details">Order Details</string>
    <string name="order_menu_send">Send order</string>

    <string name="order_empty_email">You have to enter an email</string>
    <string name="order_empty_name">You have to enter your name</string>

    <string name="user_title_add">Add item</string>
    <string name="user_title_edit">Edit item</string>

    <string name="remove_item_dialog_title">Remove this item?</string>
    
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_apply">Apply</string>

    <string name="dialog_empty_error">Field can\'t be empty</string>

</resources>
