<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_menu_buy"
        android:icon="@drawable/ic_shopping_cart_24dp"
        android:title="@string/item_menu_buy"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/item_menu_add"
        android:icon="@drawable/ic_add_circle_24dp"
        android:title="@string/item_menu_add"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/item_menu_accept"
        android:icon="@drawable/ic_check_24dp"
        android:title="@string/item_menu_accept"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />
</menu>